[tool.poetry]
name = "traffic-was-a-nightmare"
version = "0.1.0"
description = ""
authors = ["Max Lindblom <max.g.lindblom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
pylint = "^2.7.4"
pytest = "^6.2.3"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
